--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   </svg>
   <div id="app" class="app">
     <div id="fa-check" style="padding:8px">
-      <i class="fa-solid fa-dragon"></i> Prueba de icono
+      <i class="fa-solid fa-dragon"></i> CharSheet Companion
     </div>
     <div class="character-select" data-screen="select">
       <header class="select-header">
