Fix active ability effect duration handling

--- a/index.html
+++ b/index.html
@@ -540,6 +540,7 @@
       <p id="sheetAbilityQuestion" class="ability-detail-question">¿Desea ejecutar esta habilidad?</p>
       <footer class="form-actions ability-detail-actions">
         <button type="button" class="btn secondary" id="cancelAbilityExecution">Cancelar</button>
+        <button type="button" class="btn tertiary hidden" id="resetAbilityCooldown">Resetear cooldown</button>
         <button type="button" class="btn primary" id="confirmAbilityExecution">Ejecutar habilidad</button>
       </footer>
     </div>
@@ -579,6 +580,10 @@
           <label class="form-field stacked">
             Turnos de cooldown
             <input id="activeAbilityCooldown" name="cooldown" type="number" min="0" value="0" />
+          </label>
+          <label class="form-field stacked">
+            Duración del efecto (turnos)
+            <input id="activeAbilityDuration" name="effectDuration" type="number" min="0" value="0" />
           </label>
         </div>
         <div class="ability-image-field">
