--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@
       <path d="M6 8h12l-.8 11.2A2 2 0 0 1 15.2 21H8.8a2 2 0 0 1-2-1.8z" fill="currentColor" />
       <path d="M10 11h1v7h-1zm3 0h1v7h-1z" fill="#060507" opacity="0.4" />
     </symbol>
+    <symbol id="icon-download" viewBox="0 0 24 24">
+      <path d="M5 18h14v2H5z" fill="currentColor" />
+      <path d="m12 4-4 4h3v7h2V8h3z" fill="currentColor" />
+    </symbol>
+    <symbol id="icon-upload" viewBox="0 0 24 24">
+      <path d="M5 18h14v2H5z" fill="currentColor" />
+      <path d="m12 4 4 4h-3v6h-2V8H8z" fill="currentColor" />
+    </symbol>
   </svg>
   <div id="app" class="app">
     <div id="fa-check" style="padding:8px">
@@ -144,12 +152,26 @@
     <div class="character-select" data-screen="select">
       <header class="select-header">
         <h1>Selecciona tu Personaje</h1>
-        <button class="btn create-btn" id="createCharacterBtn">
-          <svg class="icon icon-user-plus" aria-hidden="true" focusable="false">
-            <use href="#icon-user-plus" xlink:href="#icon-user-plus"></use>
-          </svg>
-          Crear Personaje
-        </button>
+        <div class="select-actions">
+          <button class="btn create-btn" id="createCharacterBtn">
+            <svg class="icon icon-user-plus" aria-hidden="true" focusable="false">
+              <use href="#icon-user-plus" xlink:href="#icon-user-plus"></use>
+            </svg>
+            Crear Personaje
+          </button>
+          <button class="btn secondary import-btn" type="button" id="importCharacterBtn">
+            <svg class="icon icon-upload" aria-hidden="true" focusable="false">
+              <use href="#icon-upload" xlink:href="#icon-upload"></use>
+            </svg>
+            Importar Personaje
+          </button>
+          <input
+            type="file"
+            id="importCharacterInput"
+            accept="application/json,.json,.charsheet,.char"
+            hidden
+          />
+        </div>
       </header>
       <section class="character-list" id="characterList">
         <!-- Character cards inserted by JS -->
