--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#060507" />
-  <title>CharSheet Companion</title>
+  <title>Proyecto CoolDown</title>
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="icon" type="image/svg+xml" href="assets/icon.svg" />
   <link rel="apple-touch-icon" href="assets/icon-maskable.svg" />
@@ -19,7 +19,8 @@
   />
   <link id="mainStylesheet" rel="stylesheet" href="" />
   <script>
-    window.APP_VERSION = Date.now().toString();
+    window.APP_VERSION = 'v5';
+    window.APP_VERSION_LABEL = window.APP_VERSION;
     window.DEFAULT_PORTRAIT =
       'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAQAAAAAYLlVAAAAKklEQVR4Ae3BMQEAAADCIPunNsN+YAAAAAAA' +
       'AAAAAAAAAAAAAAAAAAD4GlrxAAE9eEIAAAAASUVORK5CYII=';
@@ -147,10 +148,11 @@
   </svg>
   <div id="app" class="app">
     <div id="fa-check" style="padding:8px">
-      <i class="fa-solid fa-dragon"></i> CharSheet Companion
+      <i class="fa-solid fa-dice-d20 fa-spin"></i> Proyecto CoolDown
     </div>
     <div class="character-select" data-screen="select">
       <header class="select-header">
+        <span class="app-version-badge" data-app-version></span>
         <h1>Selecciona tu Personaje</h1>
         <div class="select-actions">
           <button class="btn create-btn" id="createCharacterBtn">
@@ -318,9 +320,7 @@
     </div>
     <nav class="bottom-bar" aria-label="Menú principal">
       <button type="button" class="nav-button" data-action="back" aria-label="Volver">
-        <svg class="icon icon-arrow-left" aria-hidden="true" focusable="false">
-          <use href="#icon-arrow-left" xlink:href="#icon-arrow-left"></use>
-        </svg>
+        <i class="fa-solid fa-table-list" aria-hidden="true"></i>
         <span class="sr-only">Volver</span>
       </button>
       <button type="button" class="nav-button" data-action="sheet" aria-label="Hoja de personaje">
@@ -749,6 +749,25 @@
           img.setAttribute('src', placeholder);
         }
       });
+    })();
+  </script>
+
+  <script>
+    (function displayAppVersion() {
+      const badge = document.querySelector('[data-app-version]');
+      if (!badge) return;
+      const label = window.APP_VERSION_LABEL || window.APP_VERSION;
+      if (!label) {
+        badge.remove();
+        return;
+      }
+      const text = label.toString().trim();
+      if (!text) {
+        badge.remove();
+        return;
+      }
+      badge.textContent = text;
+      badge.setAttribute('title', `Versión ${text}`);
     })();
   </script>
 
